--- a/content/collections/knowledge/2024-09-02.laravel-meer-dan-een-framework.md
+++ b/content/collections/knowledge/2024-09-02.laravel-meer-dan-een-framework.md
@@ -115,7 +115,6 @@ Ben je meer van het hands-on werk? Dan zijn onze [hackathons](https://dutchlarav
 
 Dat hopen we wel natuurlijk! Er is eigenlijk geen slecht startpunt om Laravel beter te leren kennen maar de video’s van Laracast zijn bij veel developers favoriet. Voel je daarnaast vrij om eens aan te sluiten bij een van onze meetups of om lid te worden van het Laravel Discord-kanaal. We hopen je snel te zien!
 
-####
-Over de auteur
+#### Over de auteur
 
 Dit artikel werd geschreven door [Bob van Biezen](https://www.linkedin.com/in/bobvanbiezen/ "Bob van Biezen"), mede-oprichter van [Web Whales](https://webwhales.nl/ "Web Whales"). Web Whales is een van onze leden en winnaar van de laatste editie van de [LarAwards](https://dutchlaravelfoundation.nl/insights/web-whales-met-trippz-winnaar-laraward-2024)!
